@@ -1,18 +1,18 @@
 package logicClasses;
 
-import java.util.LinkedHashMap;
-import java.util.LinkedList;
+import java.util.ArrayList;
+import java.util.List;
 import java.io.*;
 import java.net.*;
 
 public class Connection {
-	private LinkedHashMap<String, String> scoreMap = new LinkedHashMap<String, String>();
+	private List<String> scores = new ArrayList<String>();
 
 	/**
 	 * getScores: Opens a http connection to a php page which returns the
 	 * highscore data, this is then saved in a hashMap
 	 */
-	public LinkedHashMap<String, String> getScores() {
+	public List<String> getScores() {
 		try {
 			URL address = new URL("http://teamwaw.co.uk/whenPlanesCollide/connection.php");
 			HttpURLConnection httpcon = (HttpURLConnection) address.openConnection();
@@ -23,29 +23,28 @@ public class Connection {
 			// name:score, with each key => value pair being on a newline.
 			String inputLine;
 			while ((inputLine = in.readLine()) != null) {
-				String[] parts = inputLine.split(":");
-				scoreMap.put(parts[0], parts[1]);
+				scores.add(inputLine);
 			}
 			in.close();
 		} catch (MalformedURLException e) {
 			e.printStackTrace();
-			scoreMap.put("ERROR:", "Sorry, we couldn't load highscores!");
+			scores.add("ERROR:Sorry, we couldn't load highscores!");
 		} catch (IOException e) {
 			e.printStackTrace();
-			scoreMap.put("ERROR:", "Sorry, we couldn't load highscores!");
+			scores.add("ERRORSorry, we couldn't load highscores!");
 		}
-		return scoreMap;
+		return scores;
 	}
 
-	public int getHighestScore() {
+	public String getHighestScore() {
 		getScores();
-		return Integer.parseInt(scoreMap.entrySet().iterator().next().getValue());
+		return scores.get(0);
 	}
 	
 	public int getLowestScore(){
 		getScores();
-		String last = new LinkedList<String>(scoreMap.values()).getLast();
-		return Integer.parseInt(last);
+		String[] parts = scores.get(scores.size() - 1).split(":");
+		return Integer.parseInt(parts[1]);
 	}
 	
 	public Boolean sendNewScore(String Name, int Score){
@@ -83,6 +82,6 @@ public class Connection {
 	}
 
 	public void clearData() {
-		scoreMap.clear();
+		scores.clear();
 	}
 }
